--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -12,7 +12,7 @@ dioxus = { version = "0.7.0" }
 enum-extract-error = "0.1.1"
 enum-extract-macro = "0.1.1"
 futures-util = "0.3.31"
-human_bytes = "0.4.3"
+human_bytes = { version = "0.4.3", features = ["si-units"] }
 js-sys = "0.3.82"
 reqwest = { version = "0.12.24", features = ["stream"] }
 scan={path="../"}
