--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,21 @@ edition = "2024"
 
 [dependencies]
 bincode = "2.0.1"
+dashmap = {version="6.1.0",optional=true}
+env_logger = "0.11.8"
 eyre = "0.6.12"
-fuzzy-matcher = "0.3.7"
-ollama-rs = "0.3.2"
+jieba-rs = {version="0.8.1",optional=true}
+log = "0.4.28"
+rayon = {version="1.11.0",optional=true}
 # rusqlite = { version = "0.37.0", features = ["bundled"] ,optional=true}
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
 tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] ,optional=true}
 zstd = "0.13.3"
 
 [features]
-native=["sqlx","tokio"]
+native=["sqlx","tokio","dashmap","rayon","jieba-rs"]
 
 [profile.wasm-dev]
 inherits = "dev"
