--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,40 @@
 [workspace]
-members=["./","gui"]
+members = ["./", "gui"]
+
 
 [package]
-name = "scan"
+name = "northstar"
 version = "0.1.0"
 edition = "2024"
+authors = ["Dangerise <dangerise@qq.com>"]
+description = "The core library of Northstar"
+license = "MIT"
+repository = "https://github.com/Dangerise/northstar"
+
 
 [dependencies]
 bincode = "2.0.1"
-dashmap = {version="6.1.0",optional=true}
+dashmap = { version = "6.1.0", optional = true }
 env_logger = "0.11.8"
 eyre = "0.6.12"
-jieba-rs = {version="0.8.1",optional=true}
+jieba-rs = { version = "0.8.1", optional = true }
 log = "0.4.28"
-rayon = {version="1.11.0",optional=true}
-# rusqlite = { version = "0.37.0", features = ["bundled"] ,optional=true}
+rayon = { version = "1.11.0", optional = true }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
-tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] ,optional=true}
+sqlx = { version = "0.8.6", features = [
+  "runtime-tokio",
+  "sqlite",
+], optional = true }
+tokio = { version = "1.48.0", features = [
+  "macros",
+  "rt",
+  "rt-multi-thread",
+], optional = true }
 zstd = "0.13.3"
 
 [features]
-native=["sqlx","tokio","dashmap","rayon","jieba-rs"]
+native = ["sqlx", "tokio", "dashmap", "rayon", "jieba-rs"]
 
 [profile.wasm-dev]
 inherits = "dev"
