--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "scan_gui"
+name = "northstar_gui"
 version = "0.1.0"
+edition = "2024"
 authors = ["Dangerise <dangerise@qq.com>"]
-edition = "2021"
+description = "The GUI of Northstar"
+license = "MIT"
+repository = "https://github.com/Dangerise/northstar"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,8 +18,15 @@ futures-util = "0.3.31"
 human_bytes = { version = "0.4.3", features = ["si-units"] }
 js-sys = "0.3.82"
 reqwest = { version = "0.12.24", features = ["stream"] }
-scan={path="../"}
-web-sys = { version = "0.3.82", features = ["Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "Window"] }
+scan = { path = "../" }
+web-sys = { version = "0.3.82", features = [
+  "Blob",
+  "BlobPropertyBag",
+  "Url",
+  "HtmlAnchorElement",
+  "Document",
+  "Window",
+] }
 web-time = "1.1.0"
 zstd = "0.13.3"
 
