--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -18,7 +18,7 @@ futures-util = "0.3.31"
 human_bytes = { version = "0.4.3", features = ["si-units"] }
 js-sys = "0.3.82"
 reqwest = { version = "0.12.24", features = ["stream"] }
-scan = { path = "../" }
+northstar = { path = "../" }
 web-sys = { version = "0.3.82", features = [
   "Blob",
   "BlobPropertyBag",
