--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
               uses: actions/checkout@v4
 
             # 2. 安装环境
-            - name: 安装sqlite3
-              run: pacman -Syu --noconfirm && pacman -S sqlite --noconfirm && pacman -S base-devel
+            - name: 安装基本环境
+              run: pacman -Syu --noconfirm && pacman -S sqlite base-devel --noconfirm
 
             # 3. 配置Rust环境
             - name: 安装Rust工具链
