--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ env_logger = "0.11.8"
 eyre = "0.6.12"
 jieba-rs = { version = "0.8.1", optional = true }
 log = "0.4.28"
+rand = "0.9.2"
 rayon = { version = "1.11.0", optional = true }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
