--- a/gui/Cargo.toml
+++ b/gui/Cargo.toml
@@ -15,6 +15,7 @@ dioxus = { version = "0.7.0" }
 enum-extract-error = "0.1.1"
 enum-extract-macro = "0.1.1"
 futures-util = "0.3.31"
+getrandom = { version = "0.3.4", features = ["wasm_js"] }
 human_bytes = { version = "0.4.3", features = ["si-units"] }
 js-sys = "0.3.82"
 novstar = { path = "../" }
