--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/Dangerise/northstar"
 
 [dependencies]
 bincode = "2.0.1"
+clap = { version = "4.5.51", features = ["derive", "cargo"] ,optional=true}
 dashmap = { version = "6.1.0", optional = true }
 env_logger = "0.11.8"
 eyre = "0.6.12"
@@ -35,7 +36,7 @@ tokio = { version = "1.48.0", features = [
 zstd = "0.13.3"
 
 [features]
-native = ["sqlx", "tokio", "dashmap", "rayon", "jieba-rs"]
+native = ["sqlx", "tokio", "dashmap", "rayon", "jieba-rs","clap"]
 
 [profile.wasm-dev]
 inherits = "dev"
